# psychrolib

./: .buildinfo  .gitattributes  .gitignore  .travis.yml  .zenodo.json  CHANGELOG.txt  CONTRIBUTING.md  DEVELOP.md  LICENSE.txt  PsychrometricsVBA_IP.bas  PsychrometricsVBA_SI.bas  Psychrometrics_IP.cpp  Psychrometrics_IP.h  Psychrometrics_IP.js  Psychrometrics_SI.cpp  Psychrometrics_SI.f90  Psychrometrics_SI.h  Psychrometrics_SI.js  README.md  Reference doc.md  api_docs.html  genindex.html  objects.inv  psychrometrics.css  psychrometrics.html  py-modindex.html  search.html  searchindex.js
.doctrees/: api_docs.doctree  environment.pickle
.github/workflows/: ci.yml
_modules/: index.html  psychrolib.html
_sources/: api_docs.rst.txt
docs/: PsychrometricsLibraryReference.md  available-functions.md  examples.md  how-to-use-psychrolib.md  overview.md
docs/api-docs/: conf.py  index.rst
docs/python/: conf.py  index.rst  psychrolib.rst
docs/sphinx/: conf.py  ghbtns.html  index.rst
docs/sphinx/_templates/: layout.html  navbar.html
examples/: README.md
examples/c/: CMakeLists.txt  README.md  example.c
examples/excel/: README.md
examples/fortran/: CMakeLists.txt  README.md  example.f90
examples/js/: README.md  example.js
examples/python/: README.md  example.py
paper/: paper.bib  paper.md
src/: CHANGELOG.txt
src/c/: psychrolib.c  psychrolib.h
src/c_sharp/: PsychroLib.sln  psychrolib.sln
src/c_sharp/PsychroLib/: PsychroLib.csproj  PsychrometricValue.cs  Psychrometrics.cs  UnitSystem.cs  psychrolib.cs
src/c_sharp/PsychroLib.Tests/: PsychroLib.Tests.csproj  PsychroLibUnitTests.cs
src/c_sharp/psychrolib/: PsychrometricValue.cs  Psychrometrics.cs  UnitSystem.cs
src/cpp/: Psychrometrics_IP.cpp  Psychrometrics_IP.h  Psychrometrics_SI.cpp  Psychrometrics_SI.h
src/fortran/: Psychrometrics_SI.f90  psychrolib.f90
src/js/: Psychrometrics_IP.js  Psychrometrics_SI.js  psychrolib.js
src/python/: psychro_ip.py  psychrolib.py  setup.py
src/python/psychrolib/: __init__.py
src/r/: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.Rmd  README.md  build_package.sh
src/r/R/: RcppExports.R  atmosphere.R  bulk.R  bulk_psychrometric_computations.R  check.R  constants.R  dew_point.R  dew_point_or_relative_humidity_and_vapor_pressure_conversions.R  dew_point_wet_bulb_relative_humidity_conversions.R  dry_air.R  dry_air_calculations.R  helpers.R  humidity.R  humidity_ratio_and_specific_humidity_conversions.R  humidity_ratio_and_vapor_pressure_conversions.R  moist_air.R  moist_air_calculations.R  psychro-package.R  psychrolib-package.R  psychrolib.R  rel_hum.R  sat_air.R  saturated_air_calculations.R  standard_atmosphere_calculations.R  temp.R  temperature_conversions.R  vapor_press.R  wet_bulb.R  wet_bulb_dew_point_or_rel_hum_to_humidity_ratio_conversions.R  zzz.R
src/r/inst/: CITATION  PSYCHROLIB_AUTHORS.txt
src/r/man/: CalcPsychrometricsFromRelHum.Rd  CalcPsychrometricsFromTDewPoint.Rd  CalcPsychrometricsFromTWetBulb.Rd  GetDegreeOfSaturation.Rd  GetDryAirDensity.Rd  GetDryAirEnthalpy.Rd  GetDryAirVolume.Rd  GetHumRatioFromEnthalpyAndTDryBulb.Rd  GetHumRatioFromRelHum.Rd  GetHumRatioFromSpecificHum.Rd  GetHumRatioFromTDewPoint.Rd  GetHumRatioFromTWetBulb.Rd  GetHumRatioFromVapPres.Rd  GetMoistAirDensity.Rd  GetMoistAirEnthalpy.Rd  GetMoistAirVolume.Rd  GetRelHumFromHumRatio.Rd  GetRelHumFromTDewPoint.Rd  GetRelHumFromTWetBulb.Rd  GetRelHumFromVapPres.Rd  GetSatAirEnthalpy.Rd  GetSatHumRatio.Rd  GetSatVapPres.Rd  GetSeaLevelPressure.Rd  GetSpecificHumFromHumRatio.Rd  GetStandardAtmPressure.Rd  GetStandardAtmTemperature.Rd  GetStationPressure.Rd  GetTCelsiusFromTKelvin.Rd  (+66 more)
src/vba/: PsychrometricsVBA_IP.bas  PsychrometricsVBA_SI.bas  psychrolib.bas
tests/: conftest.py  test_psychrolib_ip.py  test_psychrolib_si.py
tests/eplus/: CMakeLists.txt  test_point.f90  test_range.f90
tests/js/: package.json  test_psychrolib_ip.js  test_psychrolib_si.js
tests/python/: conftest.py  test_psychro_ip.py  test_psychrolib_ip.py  test_psychrolib_si.py
tests/vba/: test_psychrolib_ip.bas  test_psychrolib_ip.xlsm  test_psychrolib_si.bas  test_psychrolib_si.xlsm
tests_manual/c/: psychrolib_interactive.c
tests_manual/excel/: psychrolib_tests.xlsx
tests_manual/python/: psychrolib_interactive.py
tests_manual/vba/: psychrolib_interactive_IP.xlsm  psychrolib_interactive_SI.xlsm
(+32 files in other folders)
